# translateprompt

./: .gitignore  Makefile  README.md
backend/: .env.example  DEPLOYMENT.md  Dockerfile  __init__.py  config.py  constants.py  langgraph.json  main.py  models.py  pyproject.toml  run_with_ngrok.py
backend/basic_translate/: __init__.py  index.py
backend/database/: README.md  __init__.py  connection.py  glossary_operations.py  migrations.py  models.py  rules_operations.py  schemas.py  user_ip_operations.py  user_operations.py  user_usage_operations.py  waitlist_operations.py
backend/glossary/: README.md  __init__.py  database.py  manager.py  models.py
backend/routes/: __init__.py  auth_endpoints.py  glossary_endpoints.py  graph_endpoints.py  pricing_endpoints.py  rules_endpoints.py  user_endpoints.py  waitlist_endpoints.py
backend/translate_graph/: __init__.py  def update_glossary_supervisor.py  glossary.json  glossary_graph.py  glossary_manager.py  index.py  match_words.py  prompts.py  state.py  utils.py
backend/utils/: graph_utils.py  improvement_cache.py  llm_service.py  logger.py  user_tracking_service.py
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  silentedge.md  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: README.md  axiosConfig.ts  glossaryApi.ts  graphApi.ts  rulesApi.ts  translateApi.ts  userApi.ts  waitlistApi.ts
frontend/src/components/: CodeBlock.tsx  CompactGlossaryManager.tsx  CompactLanguageRules.tsx  DescriptionRenderer.tsx  Footer.tsx  GlossaryImprovements.tsx  GlossaryManager.tsx  GlossaryPanel.tsx  Header.tsx  Home.tsx  ImprovementSuggestions.tsx  LanguageInput.tsx  LanguageRulesCore.tsx  LanguageSelector.tsx  ManagementHub.tsx  SuggestionsPanel.tsx  SystemExplanation.tsx  TermsOfService.tsx  TranslationPanel.tsx  UpgradeButtons.tsx  UserAccountDetails.tsx  Waitlist.tsx
frontend/src/components/assistant-ui/: thread.tsx  tool-fallback.tsx  tooltip-icon-button.tsx
frontend/src/config/: subscriptionPlans.ts
frontend/src/features/: BasicGraph.tsx  TranslateGraph.tsx
frontend/src/hooks/: index.ts  useAuth.ts  useClipboard.ts  useLanguageDetection.ts  useLanguageSelection.ts  useTextInput.ts  useTranslation.ts
frontend/src/layouts/: DashboardLayout.tsx  MainLayout.tsx  index.ts
frontend/src/pages/: HowItWorks.tsx  Settings.tsx
frontend/src/parts/: TranslateGraph.tsx
frontend/src/services/: axiosConfig.ts  glossaryApi.ts  graphApi.ts  index.ts  translateApi.ts  translationService.ts
frontend/src/types/: navigation.ts
frontend/src/utils/: userUtils.ts
frontend/test-utils/: fuzzyMatchers.ts
frontend/tests/: demo-todo-app.spec.ts  example.spec.ts
(+11 files in other folders)
