[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "langchain[google-genai]>=0.3.27",
    "langgraph>=0.5.4",
    "langgraph-api>=0.3.0",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "pydantic>=2.0.0",
    "rapidfuzz>=3.13.0",
    "rich>=14.1.0",
    "langgraph-cli>=0.3.8",
    "langchain-ollama>=0.3.7",
    "langchain-openai>=0.3.32",
]

[tool.setuptools]
packages = ["translate_graph", "basic_translate"]


[tool.ruff]
# Enable auto-fixing
fix = true
unsafe-fixes = false

lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]


[tool.ruff.lint.pydocstyle]
convention = "google"
